--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -1,27 +1,36 @@
-server:
-  port: 8085
 spring:
   application:
     name: user-service
-  datasource:
-    url: jdbc:mysql://localhost:3306/user_db?createDatabaseIfNotExist=true
-    username: root
-    password: Kr12@984872
-    driver-class-name: com.mysql.cj.jdbc.Driver
-  jpa:
-    hibernate:
-      ddl-auto: update
-    show-sql: true
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.MySQL8Dialect
+  config:
+    import: optional:configserver:http://localhost:8888
 
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://localhost:8761/eureka
-  instance:
-    hostname: localhost
 
-# No jwt.secret here, as user-service doesn't generate/validate JWTs directly
-# and doesn't need to fetch it from a Config Server.
+#
+#
+#server:
+#  port: 8085
+#spring:
+#  application:
+#    name: user-service
+#  datasource:
+#    url: jdbc:mysql://localhost:3306/user_db?createDatabaseIfNotExist=true
+#    username: root
+#    password: Kr12@984872
+#    driver-class-name: com.mysql.cj.jdbc.Driver
+#  jpa:
+#    hibernate:
+#      ddl-auto: update
+#    show-sql: true
+#    properties:
+#      hibernate:
+#        dialect: org.hibernate.dialect.MySQL8Dialect
+#
+#eureka:
+#  client:
+#    serviceUrl:
+#      defaultZone: http://localhost:8761/eureka
+#  instance:
+#    hostname: localhost
+#
+## No jwt.secret here, as user-service doesn't generate/validate JWTs directly
+## and doesn't need to fetch it from a Config Server.
