security level changes for all modules

--- a/inventory-service/src/main/resources/application.yml
+++ b/inventory-service/src/main/resources/application.yml
@@ -6,3 +6,8 @@ spring:
   cloud:
     config:
       fail-fast: true
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: http://spring-security:8089
