--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <module>notification-service</module>
         <module>payment-service</module>
         <module>wishlist-service</module>
+        <module>common-module</module>
     </modules>
 
     <dependencyManagement>
@@ -61,6 +62,13 @@
                     <groupId>org.springframework.boot</groupId>
                     <artifactId>spring-boot-maven-plugin</artifactId>
                     <version>${spring-boot.version}</version>
+                    <executions>
+                        <execution>
+                            <goals>
+                                <goal>repackage</goal>
+                            </goals>
+                        </execution>
+                    </executions>
                 </plugin>
             </plugins>
         </pluginManagement>
